--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0"
   }
 }
