--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "github-fetcher-fullstack-v2",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is Tariq's fetcher app",
   "main": "index.js",
   "scripts": {
+    "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
     "db-start": "mongod --dbpath ./database/data/db"
   },
-  "author": "Beth Johnson",
+  "keywords": [
+    "fetcher",
+    "heroku"
+  ],
+  "author": "Tariq West",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -23,9 +28,13 @@
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
+  },
+  "engines": {
+    "node": "^4.1.1"
   }
 }
