--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
+    "foreman": "^2.0.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "nodemon": "^1.11.0",
