--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "This is Tariq's github fetcher app",
   "main": "index.js",
   "scripts": {
+    "start": "nf start",
     "react-dev": "webpack -d --watch --config webpack.config.js",
     "react-prod": "webpack -d --watch --config webpack.prod.config.js",
     "server-dev": "nodemon server/index.js",
+    "server-prod": "nodemon server/index.js",
     "db-start": "mongod --dbpath ./database/data/db"
   },
   "keywords": [
